other additions in navbar

--- a/src/layout/1-Navbar/_navbar.scss
+++ b/src/layout/1-Navbar/_navbar.scss
@@ -17,7 +17,7 @@
                 font-size: 1.2em;
             }
         }
-        .social-media  {
+        .social-media {
             svg {
                 cursor: pointer;
                 transition: 0.5s;
@@ -42,47 +42,122 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-block:1em ;
+    padding-block: 1em;
+    box-shadow: 0em 0.3em 1em #2d2d2d2d;
     .logo {
-        .logo-name{
+        .anime-logo {
+            display: inline-flex;
+        }
+        .logo-name {
             font-family: $sub-font;
             color: $main-color;
+            &:hover {
+                animation: rotate-logo 2s alternate 2;
+            }
         }
     }
+    @keyframes rotate-logo {
+        0% {
+            rotate: 0deg;
+        }
+        50% {
+            rotate: -3deg;
+        }
+        100% {
+            rotate: 3deg;
+        }
+    }
+
     ul {
         display: flex;
         gap: 1em;
-        a {
-            font-size: 1.2em;
-            color: #2d2d2dd2;
-            &.active {
-                color: $main-color;
+        align-items: center;
+        padding: 0.5em;
+        width: 50%;
+        li {
+            display: flex;
+            // background-color: #eee;
+            padding: 0.5em;
+            cursor: pointer;
+            flex-direction: column;
+            position: relative;
+            a {
+                display: flex;
+                // font-size: 1.1em;
+                color: #2d2d2dd2;
+                transition: 0.4s;
+                width: 100%;
+                height: 100%;
+                text-transform: capitalize;
+                &.active,
+                &:hover {
+                    color: $main-color;
+                }
+                svg {
+                    translate: 0 0.2em;
+                }
+            }
+            ul {
+                display: flex;
+                gap: 1em;
+                flex-direction: column;
+                position: absolute;
+                width: 12em;
+                padding: 1.5em 0.2em;
+                top: 2.3em;
+                background-color: #fff;
+                box-shadow: 0.5em 0.5em 0.5em #0000002d;
+                border-radius: 1em;
+                z-index: 3;
+                display: none;
+                li {
+                    width: 100%;
+                    &:not(:last-child) {
+                        border-bottom: 1px solid #2d2d2d2d;
+                    }
+                }
+            }
+            // المشكلة اللي عندي هنا فالـ position 
+            ul.gallery_list {
+                li {position: relative;}
+                width: 50rem;
+                right: -100%;
+                height: 30em;
+                gap: 2em;
+            }
+            &:hover {
+                ul {
+                    display: flex;
+                }
             }
         }
     }
     .nav-icons {
         display: flex;
         gap: 1em;
-        .liked-icon , .cart-icon {
+        .liked-icon,
+        .cart-icon {
             position: relative;
             padding: 0.3em;
         }
-        .like-notify, .cart-notify {
+        .like-notify,
+        .cart-notify {
             position: absolute;
             top: -0.3em;
             right: -0.3em;
-            width: 1.5em;
-            height: 1.5em;
+            width: 1.3em;
+            height: 1.3em;
             background-color: $main-color;
             padding: 0.2em;
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #FFF;
+            color: #fff;
         }
         svg {
-            font-size: 2.5em;
+            font-size: 2em;
+            cursor: pointer;
         }
     }
 }
