--- a/src/layout/2-Footer/_footer.scss
+++ b/src/layout/2-Footer/_footer.scss
@@ -1,5 +1,8 @@
 footer {
-    background-color: #3d3d3d;
+    background-color: #3d3d3d2d;
     color: #FFF;
+    width: 100%;
     min-height: 50vh;
+    position: absolute;
+    bottom: -15em;
 }
