--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,7 @@
-@import './variables' ;
-@import './reset' ;
+@import './global/variables' ;
+@import './global/reset' ;
+@import './global/responsive' ;
 @import '../layout/1-Navbar/navbar';
+@import '../layout/1-Navbar/navbar-responsive';
 @import '../layout/2-Footer/footer';
-@import '../pages/HomePage/homepage'
+@import '../pages/HomePage/homepage';
