--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -5,3 +5,7 @@
 @import '../layout/1-Navbar/navbar-responsive';
 @import '../layout/2-Footer/footer';
 @import '../pages/HomePage/homepage';
+
+.page-test {
+    height: 80vh;
+}
