--- a/src/layout/1-Navbar/_navbar.scss
+++ b/src/layout/1-Navbar/_navbar.scss
@@ -14,7 +14,7 @@
             border-right: 1px solid #2d2d2d2d;
             padding-right: 1em;
             svg {
-                font-size: 1.2em;
+                font-size: 0.95em;
             }
         }
         .social-media {
@@ -110,20 +110,13 @@
                 border-radius: 1em;
                 z-index: 3;
                 display: none;
+                transition: 0.5s;
                 li {
                     width: 100%;
                     &:not(:last-child) {
                         border-bottom: 1px solid #2d2d2d2d;
                     }
                 }
-            }
-            // المشكلة اللي عندي هنا فالـ position 
-            ul.gallery_list {
-                li {position: relative;}
-                width: 50rem;
-                right: -100%;
-                height: 30em;
-                gap: 2em;
             }
             &:hover {
                 ul {
