--- a/src/style/global/_reset.scss
+++ b/src/style/global/_reset.scss
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Rubik , sans-serif;
+    line-height: 1.4rem;
 }
 
 @font-face {
@@ -36,19 +37,19 @@ ul {
 }
 
 h1 {
-    font-size: 4rem;
-}
-h2 {
-    font-size: 3.5rem;
-}
-h3 {
-    font-size: 3rem;
-}
-h4 {
     font-size: 2.5rem;
 }
+h2 {
+    font-size: 2.3rem;
+}
+h3 {
+    font-size: 2.1rem;
+}
+h4 {
+    font-size: 1.9rem;
+}
 h5 {
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 h6 {
     font-size: 1.5rem;
@@ -60,4 +61,14 @@ p {
 
 .x-padding {
     padding-inline: 10em;
+}
+
+.custom-header {
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+button {
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
