--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -4,7 +4,9 @@
 @import '../layout/1-Navbar/navbar';
 @import '../layout/1-Navbar/navbar-responsive';
 @import '../layout/2-Footer/footer';
+@import '../layout/2-Footer/footer-responsive';
 @import '../pages/HomePage/homepage';
+@import '../components/SelectMenu/selectMenu';
 
 .page-test {
     height: 80vh;
