footer responsive + contact bar section

--- a/src/layout/2-Footer/_footer-responsive.scss
+++ b/src/layout/2-Footer/_footer-responsive.scss
@@ -1,15 +1,56 @@
-
-@media (max-width:1024px) {
+@media (max-width:1050px) {
     footer {
-        .footer-content{
-            flex-wrap: wrap;
-            .footer_sections{
-                width: calc((100% - 3rem)  / 3);
+        .footer-content {
+            &-sections {
+                &-single {
+                    height: auto;
+                    width: calc((100% - 3rem) / 3);
+                    &-details{
+                        flex-grow: 0;
+                    }
+                }
+
+            }
+        }
+        .copy-rights {
+            position: static;
+        }
+    }
+}
+
+@media (max-width:768px) {
+    footer {
+        .footer-content {
+            &-sections {
+                &-single {
+                    &-location{
+                        display: none;
+                    }
+                    gap: 1rem;
+                    width: calc((100% - 1.5rem) / 2);
+                }
+            }
+
+        }
+    }
+}
+
+@media (max-width:580px) {
+    footer {
+        .footer-content {
+            &-sections {
+                &-single {
+                    padding: 1rem;
+                    gap: 2rem;
+                    width:100%;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+            button.back-top {
+                display: none;
             }
         }
     }
 }
 
-@media (max-width:1024px) {
-
-}
