--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -7,6 +7,8 @@
 @import '../layout/2-Footer/footer-responsive';
 @import '../pages/HomePage/homepage';
 @import '../components/SelectMenu/selectMenu';
+@import '../components/EmailSubmitInput/emailSubmitInput';
+@import '../pages/HomePage/homePage-responsive';
 
 .page-test {
     height: 80vh;
