--- a/src/layout/2-Footer/_footer.scss
+++ b/src/layout/2-Footer/_footer.scss
@@ -1,57 +1,62 @@
 footer {
-    border-top:1px solid #00000080 ;
+    border-top: 1px solid #00000080;
     height: 75vh;
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    gap: 0.5rem;
+    gap: 4rem;
     position: relative;
     font-size: 0.9em;
     .footer-content {
-        display: flex;
-        align-items: center;
-        gap: 1.5rem;
-        padding: 0.5em;
-        height: 85%;
-        position: relative;
-        .footer_sections{
+        padding-top: 4rem;
+        &-sections {
             display: flex;
-            flex-direction: column;
-            width: calc((100% - 6rem) / 6);
-            height: 100%;
-            margin-top: 8rem;
-            gap: 1em;
-            .location-title {
-                font-size: 1em;
-                color: #777;
-            }
-            .details-head {
-                color: #999;
-                font-weight: 300;
-                font-size: 1.4rem;
-            }
-            &.location-section{
-                margin-top: 0;
-                justify-content: center;
-                translate: 0 -2em;
-            }
-            &.footer-details {
-                flex-grow: 1;
-                .secured-by{
-                    translate: 0 4em ;
-                    font-size: 1.1em;
-                }
-            }
-            .gallery-sub-list {
+            align-items: center;
+            gap: 1.5rem;
+            padding: 0.5em;
+            height: 85%;
+            flex-wrap: wrap;
+            // position: relative;
+            &-single {
                 display: flex;
+                justify-content: flex-start;
                 flex-direction: column;
-                gap: 0.7rem;
-                li {
-                    a {
+                width: calc((100% - 6rem) / 6);
+                height: 100%;
+                // margin-top: 8rem;
+                gap: 1em;
+                &-location {
+                    // margin-top: 0;
+                    justify-content: center;
+                    translate: 0 -2em;
+                    .location-title {
+                        font-size: 1em;
                         color: #777;
-                        transition: 0.5s;
-                        &:hover {
-                            color: $main-color;
+                    }
+                }
+                &-details {
+                    flex-grow: 1;
+                    .details-head {
+                        color: #999;
+                        font-weight: 300;
+                        font-size: 1.4rem;
+                    }
+                    .secured-by {
+                        translate: 0 4em;
+                        font-size: 1.1em;
+                    }
+                }
+                .gallery-sub-list {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.7rem;
+                    li {
+                        a {
+                            color: #777;
+                            transition: 0.5s;
+                            &:hover {
+                                color: $main-color;
+                            }
                         }
                     }
                 }
@@ -59,24 +64,25 @@ footer {
         }
         button {
             padding: 1.2em 1.8em;
-                    width: fit-content;
-                    border-radius: 0.8em;
-                    display: flex;
-                    align-items: center;
-                    gap: 0.5rem;
-                    background-color: $main-color;
-                    color: #FFF;
-                    text-transform: capitalize;
-                    font-size: 0.8rem;
-                    svg {
-                        font-size: 1.2rem;
-                    }
-            &.back-top{
+            width: fit-content;
+            border-radius: 0.8em;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            background-color: $main-color;
+            color: #fff;
+            text-transform: capitalize;
+            font-size: 0.8rem;
+            svg {
+                font-size: 1.2rem;
+            }
+            &.back-top {
                 position: absolute;
-                right: -10em;
+                right: 0;
                 rotate: 270deg;
-                padding-inline: 3em;
+                padding-inline: 2em;
                 text-transform: uppercase;
+                translate: 0 -7rem;
             }
         }
     }
@@ -86,13 +92,112 @@ footer {
         justify-content: space-between;
         padding-block: 2em;
         background-color: $main-color;
-        color: #FFF;
+        color: #fff;
         width: 100%;
         height: 15%;
         left: 0;
         bottom: 0;
-        p{
+        p {
             font-size: 1em;
         }
     }
 }
+
+// footer {
+//     border-top:1px solid #00000080 ;
+//     height: 75vh;
+//     display: flex;
+//     flex-direction: column;
+//     padding: 1rem;
+//     gap: 0.5rem;
+//     position: relative;
+//     font-size: 0.9em;
+//     .footer-content {
+//         display: flex;
+//         align-items: center;
+//         gap: 1.5rem;
+//         padding: 0.5em;
+//         height: 85%;
+//         position: relative;
+//         .footer_sections{
+//             display: flex;
+//             flex-direction: column;
+//             width: calc((100% - 6rem) / 6);
+//             height: 100%;
+//             margin-top: 8rem;
+//             gap: 1em;
+//             .location-title {
+//                 font-size: 1em;
+//                 color: #777;
+//             }
+//             .details-head {
+//                 color: #999;
+//                 font-weight: 300;
+//                 font-size: 1.4rem;
+//             }
+//             &.location-section{
+//                 margin-top: 0;
+//                 justify-content: center;
+//                 translate: 0 -2em;
+//             }
+//             &.footer-details {
+//                 flex-grow: 1;
+//                 .secured-by{
+//                     translate: 0 4em ;
+//                     font-size: 1.1em;
+//                 }
+//             }
+//             .gallery-sub-list {
+//                 display: flex;
+//                 flex-direction: column;
+//                 gap: 0.7rem;
+//                 li {
+//                     a {
+//                         color: #777;
+//                         transition: 0.5s;
+//                         &:hover {
+//                             color: $main-color;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//         button {
+//             padding: 1.2em 1.8em;
+//                     width: fit-content;
+//                     border-radius: 0.8em;
+//                     display: flex;
+//                     align-items: center;
+//                     gap: 0.5rem;
+//                     background-color: $main-color;
+//                     color: #FFF;
+//                     text-transform: capitalize;
+//                     font-size: 0.8rem;
+//                     svg {
+//                         font-size: 1.2rem;
+//                     }
+//             &.back-top{
+//                 position: absolute;
+//                 right: -10em;
+//                 rotate: 270deg;
+//                 padding-inline: 3em;
+//                 text-transform: uppercase;
+//             }
+//         }
+//     }
+//     .copy-rights {
+//         position: absolute;
+//         display: flex;
+//         justify-content: space-between;
+//         padding-block: 2em;
+//         background-color: $main-color;
+//         color: #FFF;
+//         width: 100%;
+//         height: 15%;
+//         left: 0;
+//         bottom: 0;
+//         p{
+//             font-size: 1em;
+//         }
+//     }
+// }
