--- a/src/style/global/_reset.scss
+++ b/src/style/global/_reset.scss
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Rubik , sans-serif;
-    line-height: 1.4rem;
+    line-height: 1.4;
 }
 
 @font-face {
