add sponsors section

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -8,6 +8,7 @@
 @import '../pages/HomePage/homepage';
 @import '../components/SelectMenu/selectMenu';
 @import '../components/EmailSubmitInput/emailSubmitInput';
+@import '../components/sponsors/sponsors.scss';
 @import '../pages/HomePage/homePage-responsive';
 
 .page-test {
