add pagination section in home page with responsive

--- a/src/pages/HomePage/_homePage-responsive.scss
+++ b/src/pages/HomePage/_homePage-responsive.scss
@@ -1,5 +1,14 @@
 @media(max-width:1000px){
     .home-page {
+        .home-pagination-section{
+            .single-pagination-container {
+                .single-pagination-header{
+                    &-title {
+                        font-size: 1.1rem;
+                    }
+                }
+            }
+        }
         .contact-bar{
             &-layout {
                 width: 100%;
@@ -7,6 +16,16 @@
                 &.send-email {
                     
                 }
+            }
+        }
+    }
+}
+@media(max-width:768px){
+    .home-page {
+        .home-pagination-section{
+            .single-pagination-container {
+                width: 100%;
+
             }
         }
     }
