--- a/src/components/sponsors/sponsors.scss
+++ b/src/components/sponsors/sponsors.scss
@@ -2,7 +2,7 @@
     height: 30vh;
     padding-top: 5rem;
     margin-bottom:5rem ;
-    border-top: 1px solid #2d2d2d;
+    border-top: 1px solid #2d2d2d2d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         img {
-            width: 70%;
+            width: 50%;
             opacity: 0.4;
             transition: 0.4s;
             &:hover {
@@ -29,7 +29,7 @@
     .sponsors-section{
         &-icons {
             img {
-                width: 90%;
+                width: 80%;
             }
         }
     }
