--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -8,7 +8,8 @@
 @import '../pages/HomePage/homepage';
 @import '../components/SelectMenu/selectMenu';
 @import '../components/EmailSubmitInput/emailSubmitInput';
-@import '../components/sponsors/sponsors.scss';
+@import '../components/paginationSection/paginationSection';
+@import '../components/sponsors/sponsors';
 @import '../pages/HomePage/homePage-responsive';
 
 .page-test {
