add Featured Products section + starts in product card

--- a/src/components/paginationSection/_paginationSection.scss
+++ b/src/components/paginationSection/_paginationSection.scss
@@ -88,3 +88,11 @@
         }
     }
 }
+
+@media(max-width:768px){
+        .pagination-section{
+            .single-pagination-container {
+                width: 100%;
+            }
+        }
+}
