--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,6 +14,8 @@
 @import '../components/featuredProducts/featuredProducts';
 @import '../components/ProductCard/productCard';
 @import '../pages/HomePage/homePage-responsive';
+@import '../components/HeroSection/heroSection';
+@import '../components/HeroSection/heroSection-responsive';
 
 .page-test {
     min-height: 80vh;
