--- a/src/style/global/_reset.scss
+++ b/src/style/global/_reset.scss
@@ -58,9 +58,11 @@ p {
     font-size: 1.2rem;
 }
 
-
+.container{
+    margin-inline:10rem ;
+}
 .x-padding {
-    padding-inline: 10em;
+    padding-inline: 10rem;
 }
 
 .custom-header {
